--- a/index.html
+++ b/index.html
@@ -3,99 +3,106 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="ru">
 
-<head>
-     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-     <title>Резюме</title>
+    <title>Резюме</title>
 
-     <style type="text/css">
-        * { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(images/noise.jpg); }
-        .clear { clear: both; }
-        #page-wrap { width: 800px; margin: 40px auto 60px; }
-        #pic { float: right; margin: -30px 0 0 0; border-radius: 100px; }
-        h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 28px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-        h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
-        p { margin: 0 0 16px 0; }
-        a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
-        a:hover { border-bottom-style: solid; color: black; }
-        ul { margin: 0 0 32px 17px; }
-        #objective { width: 500px; float: left; }
-        #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 100px;  }
-        dd { width: 600px; float: right; }
-        dd.clear { float: none; margin: 0; height: 15px; }
-     </style>
-</head>
+    <style type="text/css">
+      * { margin: 0; padding: 0; }
+      body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(images/noise.jpg); }
+      .clear { clear: both; }
+      #page-wrap { width: 800px; margin: 40px auto 60px; }
+      #pic { float: right; margin: -30px 0 0 0; border-radius: 100px; }
+      h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 28px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
+      h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
+      h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
+      p { margin: 0 0 16px 0; }
+      a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
+      a:hover { border-bottom-style: solid; color: black; }
+      ul { margin: 0 0 32px 17px; }
+      #objective { width: 500px; float: left; }
+      #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
+      dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; float: left; height: 100px;  }
+      dd { width: 600px; float: right; }
+      dd.clear { float: none; margin: 0; height: 15px; }
+    </style>
+  </head>
 
-<body>
+  <body>
 
-  <div id="page-wrap">
-    <img src="images/irina.jpg" alt="Photo of Cthulu" id="pic" />
-      <div id="contact-info" class="vcard">
-        <h1 class="fn">Дедекина Ирина Александровна</h1>
-          <p>
-            Телефон: <span class="tel">+7 977-867-67-74</span><br />
-            Email: <a class="email" href="mailto:dedekina92@yandex.ru">dedekina92@yandex.ru</a>
-          </p>
-      </div>
+    <div id="page-wrap">
+      <img src="images/irina.jpg" alt="my photo" id="pic" />
+        <div id="contact-info" class="vcard">
+          <h1 class="fn">Дедекина Ирина Александровна</h1>
+            <p>
+              <p>Телеграм: <a class="telegram" href="https://t.me/irinadedekina">@Irinadedekina</a></p>
+              <p>Email: <a class="email" href="mailto:dedekina92@yandex.ru">dedekina92@yandex.ru</a></p>
+              <p><a class="github" href="https://github.com/IrinaDedekina">github.com/IrinaDedekina</a></p>
+              <p>Проживание: г. Москва</p>
+              <p>Готова к переезду</p>
+            </p>
+        </div>
 
-      <div id="objective">
-        <ul>
-          <li>Разработчик Ruby on Rails</li>
-          <li>Занятость: полная занятость</li>
-          <li>График работы: полный день</li>
-        </ul>
-      </div>
-
-      <div class="clear"></div>
-
-      <dl>
-        <dd class="clear"></dd>
-
-        <dt>Образование</dt>
-        <dd>
+        <div id="objective">
           <ul>
-              <li>Высшее образование (Бакалавр). ФГБОУ ВПО МАМИ. Специальность по образованию: экономика. Дата окончания: 2015 г.</li>
-              <li>Онлайн интенсив Ruby on Rails: <a href="http://goodprogrammer.ru">Хороший программист</a>. Дата окончания: 2021 г.</li>
+            <li>Разработчик Ruby on Rails</li>
+            <li>Занятость: полная занятость</li>
+            <li>График работы: полный день</li>
           </ul>
-        </dd>
+        </div>
 
-        <dd class="clear"></dd>
+        <div class="clear"></div>
 
-        <dt>Навыки</dt>
-        <dd>
-          <ul>
-            <li>Ruby</li>
-            <li>Базовые знания HTML и CSS</li>
-            <li>Ruby on Rails</li>
-            <li>Отправка писем через mailjet</li>
-            <li>Тестирование кода с помощью Rspec и FactoryBot</li>
-            <li>Деплой на Heroku и VPS (в том числе с помощью capistrano)</li>
-            <li>Локализация i18n</li>
-            <li>Базовые знания SQL</li>
-            <li>Использование системы контроля версий - Git</li>
+        <dl>
+          <dd class="clear"></dd>
 
-          </ul>
-        </dd>
+          <dt>Образование</dt>
+          <dd>
+            <ul>
+                <li>Высшее образование (Бакалавр). ФГБОУ ВПО МАМИ. Специальность по образованию: экономика. Дата окончания: 2015 г.</li>
+                <li>Онлайн интенсив Ruby on Rails: <a href="http://goodprogrammer.ru">Хороший программист</a>. Дата окончания: 2021 г.</li>
+            </ul>
+          </dd>
 
-        <dd class="clear"></dd>
+          <dd class="clear"></dd>
 
-        <dt>Места работы</dt>
-        <dd>
-          <ul>
-            <li><b>Июль 2018 — октябрь 2020</b> ИП Андронова Ирина Борисовна. Специалист договорного отдела</li>
-            <li><b>Июнь 2016 — Февраль 2017</b> РОУ "МДПК "Сигнал-01". Специалист договорного отдела</li>
-            <li><b>Ноябрь 2015 — Май 2016</b> ООО "Арт Продакшн". Финансовый координатор</li>
-            <li><b>Сентябрь 2011 — Март 2012</b> ЗАО "Связной Логистика". Специалист по продаже страховых услуг</li>
-            <li><b>Март 2012 — Октябрь 2015</b> ООО "Гало плюс". Администратор</li>
-          </ul>
-        </dd>
+          <dt>Навыки</dt>
+          <dd>
+            <ul>
+              <li>Ruby</li>
+              <li>Базовые знания HTML и CSS</li>
+              <li>Ruby on Rails</li>
+              <li>Отправка писем через mailjet</li>
+              <li>Тестирование кода с помощью Rspec и FactoryBot</li>
+              <li>Деплой на Heroku и VPS (в том числе с помощью capistrano)</li>
+              <li>Локализация i18n</li>
+              <li>Базовые знания SQL</li>
+              <li>Использование системы контроля версий - Git</li>
 
-        <dd class="clear"></dd>
-      </dl>
-      <div class="clear"></div>
-  </div>
-</body>
+            </ul>
+          </dd>
+
+          <dd class="clear"></dd>
+
+          <dt>Места работы</dt>
+          <dd>
+            <ul>
+              <li><b>Июль 2018 — октябрь 2020</b> ИП Андронова Ирина Борисовна. Специалист договорного отдела</li>
+            </ul>
+          </dd>
+
+          <dd class="clear"></dd>
+          <dt>Мои проекты</dt>
+          <dd>
+            <ul>
+              <li>Приложение "Хорошие вопросы" на <a href="https://github.com/IrinaDedekina/askme">Github</a> и на <a href="https://megaaask.herokuapp.com">Heroku</a> - в данном приложении можно задавать вопросы пользователям, а так же отвечать на вопросы, заданные Вам другими пользователями.</li>
+              <li>Приложение "Барбекю" на <a href="https://github.com/IrinaDedekina/bbq">Github</a> и на <a href="http://megabbq.site">VPS</a> - в данном приложении можно создавать событие, на которое могут подписаться все желающие, кто хочет присоединиться. Так же можно делиться фотографиями данного события и оставлять комментарии.</li>
+            </ul>
+          </dd>
+          <dd class="clear"></dd>
+        </dl>
+        <div class="clear"></div>
+    </div>
+  </body>
 </html>
