--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
       a:hover { border-bottom-style: solid; color: black; }
       ul { margin: 0 0 32px 17px; }
+      li { margin:2px 0; }
+      .justify { text-align: justify;}
       #objective { width: 500px; float: left; }
       #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
       dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; float: left; height: 100px;  }
@@ -57,11 +59,22 @@
         <dl>
           <dd class="clear"></dd>
 
+          <dt>Обо мне</dt>
+          <dd>
+            <ul>
+              <p class="justify">Привет! Меня зовут Ирина, мне 28 лет и я начинающий Ruby on Rails разработчик. На данный момент у меня нет коммерческого опыта в разработке, но есть огромное желание и мотивация к развитию в данной сфере.</p>
+              <p class="justify">Очень требовательна к себе, не люблю бросать дела на пол пути, стараюсь довести всё до конца.</p>
+              <p class="justify">Хочу найти работу с интересными проектами и отзывчивой командой :)</p>
+            </ul>
+          </dd>
+
+          <dd class="clear"></dd>
+
           <dt>Образование</dt>
           <dd>
             <ul>
-                <li>Высшее образование (Бакалавр). ФГБОУ ВПО МАМИ. Специальность по образованию: экономика. Дата окончания: 2015 г.</li>
-                <li>Онлайн интенсив Ruby on Rails: <a href="http://goodprogrammer.ru">Хороший программист</a>. Дата окончания: 2021 г.</li>
+              <li>Высшее образование (Бакалавр). ФГБОУ ВПО МАМИ. Специальность по образованию: экономика. Дата&nbsp;окончания:&nbsp;2015&nbsp;г.</li>
+              <li>Онлайн интенсив Ruby on Rails: <a href="http://goodprogrammer.ru">Хороший программист</a>. Дата&nbsp;окончания:&nbsp;2021&nbsp;г.</li>
             </ul>
           </dd>
 
@@ -79,7 +92,6 @@
               <li>Локализация i18n</li>
               <li>Базовые знания SQL</li>
               <li>Использование системы контроля версий - Git</li>
-
             </ul>
           </dd>
 
@@ -95,8 +107,8 @@
           <dd class="clear"></dd>
           <dt>Мои проекты</dt>
           <dd>
-            <ul>
-              <li>Приложение "Хорошие вопросы" на <a href="https://github.com/IrinaDedekina/askme">Github</a> и на <a href="https://megaaask.herokuapp.com">Heroku</a> - в данном приложении можно задавать вопросы пользователям, а так же отвечать на вопросы, заданные Вам другими пользователями.</li>
+            <ul class="justify">
+              <li>Приложение "Хорошие вопросы" на <a href="https://github.com/IrinaDedekina/askme">Github</a> и на <a href="https://megaaask.herokuapp.com">Heroku</a> - в данном приложении можно задавать вопросы пользователям, а так же отвечать на вопросы, заданные Вам другими пользователями.</li><br />
               <li>Приложение "Барбекю" на <a href="https://github.com/IrinaDedekina/bbq">Github</a> и на <a href="http://megabbq.site">VPS</a> - в данном приложении можно создавать событие, на которое могут подписаться все желающие, кто хочет присоединиться. Так же можно делиться фотографиями данного события и оставлять комментарии.</li>
             </ul>
           </dd>
