--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div id="contact-info" class="vcard">
           <h1 class="fn">Дедекина Ирина Александровна</h1>
             <p>
-              <p>Телеграм: <a class="telegram" href="https://t.me/irinadedekina">@Irinadedekina</a></p>
+              <p>Telegram: <a class="telegram" href="https://t.me/irinadedekina">@Irinadedekina</a></p>
               <p>Email: <a class="email" href="mailto:dedekina92@yandex.ru">dedekina92@yandex.ru</a></p>
-              <p><a class="github" href="https://github.com/IrinaDedekina">github.com/IrinaDedekina</a></p>
-              <p>Проживание: г. Москва</p>
-              <p>Готова к переезду</p>
+              <p>Github: <a class="github" href="https://github.com/IrinaDedekina">github.com/IrinaDedekina</a></p>
             </p>
         </div>
 
         <div id="objective">
           <ul>
             <li>Разработчик Ruby on Rails</li>
-            <li>Занятость: полная занятость</li>
-            <li>График работы: полный день</li>
+            <li>Занятость: полная занятость, стажировка</li>
+            <li>График работы: удаленная работа, полный день</li>
+            <li>Проживание: г. Москва</li>
+            <li>Готова к переезду</li>
           </ul>
         </div>
 
