--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <dt>Обо мне</dt>
           <dd>
             <ul>
-              <p class="justify">Привет! Меня зовут Ирина, мне 28 лет и я начинающий Ruby on Rails разработчик. На данный момент у меня нет коммерческого опыта в разработке, но есть огромное желание и мотивация к развитию в данной сфере.</p>
+              <p class="justify">Привет! Меня зовут Ирина, мне 29 лет и я начинающий Ruby on Rails разработчик. На данный момент у меня нет коммерческого опыта в разработке, но есть огромное желание и мотивация к развитию в данной сфере.</p>
               <p class="justify">Очень требовательна к себе, не люблю бросать дела на пол пути, стараюсь довести всё до конца.</p>
               <p class="justify">Хочу найти работу с интересными проектами и отзывчивой командой :)</p>
             </ul>
@@ -109,7 +109,7 @@
           <dd>
             <ul class="justify">
               <li>Приложение "Хорошие вопросы" на <a href="https://github.com/IrinaDedekina/askme">Github</a> и на <a href="https://megaaask.herokuapp.com">Heroku</a> - в данном приложении можно задавать вопросы пользователям, а так же отвечать на вопросы, заданные Вам другими пользователями.</li><br />
-              <li>Приложение "Барбекю" на <a href="https://github.com/IrinaDedekina/bbq">Github</a> и на <a href="http://megabbq.site">VPS</a> - в данном приложении можно создавать событие, на которое могут подписаться все желающие, кто хочет присоединиться. Так же можно делиться фотографиями данного события и оставлять комментарии.</li>
+              <li>Приложение "Барбекю" на <a href="https://github.com/IrinaDedekina/bbq">Github</a> - в данном приложении можно создавать событие, на которое могут подписаться все желающие, кто хочет присоединиться. Так же можно делиться фотографиями данного события и оставлять комментарии.</li>
             </ul>
           </dd>
           <dd class="clear"></dd>
